syntax = "proto3";

service OrderingGrpc {
	rpc Service_A(Request) returns (Response) {}
}

message Request {
	string OrderId=1;
}


message Response {
    string OrderId=1;
	string UserName=2;
}
